Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55143

ApplicationWindow contents is not relayouted when header.visibility or footer.visibility changes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.1
    • 5.7.0
    • Quick: Controls 2
    • None
    • 0764003773e3db3ffdd76021f1a17359cb52452c

    Description

      Steps to reproduce:
      1. Open, compile and run the attached project.
      2. Press the full-screen button "Toggle toolbar". Observe how the header and footer hide and the button correctly expands into the newly-freed space.
      3. Open main.qml and comment out the lines 37 and 38.
      4. Re-run the project, click the button and observe that the toolbars do hide but the button is not expanded into the free space.

      Attachments

        For Gerrit Dashboard: QTBUG-55143
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            alexium Alex
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes