Page: take header & footer visibility into account in relayout()

Task-number: QTBUG-55143
Change-Id: I4176d0f8902ee417fd5cb938b0f0902d480e80f6
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>